force-app/main/default/objects/Status_Tracking__c/Status_Tracking__c.object-meta.xml
<CustomObject>
    <description>Object used to track time spent in each Status on the associated Request record</description>
    <label>Status Tracking</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Status Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>