force-app/main/default/objects/Status_Tracking__c/fields/Enter_Time__c.field-meta.xml
<CustomField>
    <fullName>Enter_Time__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com</businessOwnerUser>
    <description>NICC-051009</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field shows the time the Request record entered this Status listed on this record</inlineHelpText>
    <label>Enter Time</label>
    <type>DateTime</type>
</CustomField>