force-app/main/default/objects/Status_Tracking__c/fields/Exit_Time__c.field-meta.xml
<CustomField>
    <fullName>Exit_Time__c</fullName>
    <businessOwnerUser>kcontreraz@newmarketinc.com</businessOwnerUser>
    <description>NICC-051009; updated via NICC-057681</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field shows the time the Request record exited the Status listed on this record</inlineHelpText>
    <label>Status End Time</label>
    <type>DateTime</type>
</CustomField>