force-app/main/default/objects/Status_Tracking__c/fields/Exit_Time_GMT_Format__c.field-meta.xml
<CustomField>
    <fullName>Exit_Time_GMT_Format__c</fullName>
    <formula>TEXT( DATETIMEVALUE( Exit_Time__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exit Time (GMT Format)</label>
    <type>Text</type>
</CustomField>