force-app/main/default/objects/Status_Tracking__c/fields/Time_Elapsed_9_hr_Display_Hrs_Min__c.field-meta.xml
<CustomField>
    <fullName>Time_Elapsed_9_hr_Display_Hrs_Min__c</fullName>
    <description>NICC-053437</description>
    <formula>TEXT(FLOOR( Time_Elapsed_Hours_8hr_day__c )) + &apos; h &apos; +
TEXT( FLOOR( ( ROUND(Time_Elapsed_Hours_8hr_day__c,2)-FLOOR(Time_Elapsed_Hours_8hr_day__c) ) * 60 ) ) + &apos; min&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the total hours from the field &quot;Time Elapsed (9 hr day)&quot; in hours and minutes</inlineHelpText>
    <label>Time Elapsed (9 hr, Display Hrs &amp; Min)</label>
    <type>Text</type>
</CustomField>