force-app/main/default/objects/Status_Tracking__c/fields/Time_Elapsed_Hours_24hr_day__c.field-meta.xml
<CustomField>
    <fullName>Time_Elapsed_Hours_24hr_day__c</fullName>
    <businessOwnerUser>kcontreraz@newmarketinc.com</businessOwnerUser>
    <description>NICC-051009; updated via NICC-057681</description>
    <inlineHelpText>This field is populated from a trigger called “AH_StatusTracking_TriggerHandler”. This field shows the time elapsed between Start and End Time based on a 24 hr day. Time does not include weekends.</inlineHelpText>
    <label>Status Time Elapsed</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>